--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -630,6 +630,7 @@
             <input type="email" id="lname" name="lname" placeholder="Your Email Address" required=""><br>
             <textarea type="text" id="message" name="message" rows="7" placeholder="Enter Your Message" required=""></textarea><br>
             <input type="button" id="submit" name="submit" value="submit" class="submit">
+            <!-- <button type="submit" class="submit">Submit</button> -->
             </form> 
         </div>
 
@@ -639,9 +640,15 @@
     </div>
  
     <div class="bottom">
+      <div class=bottomImage>
+        <img src="/CB Clone/images/navLogo.png" alt="">
+      <div>
+        
+      </div>
 
 
-    </div>
+
+      </div>
 
   </body>
 </html>
