--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -641,19 +641,36 @@
  
     <!--Footer-->
     <div class="bottom">
-      <div class=bottomImage>
-        <img src="/CB Clone/images/navLogo.png" alt="" height="50px">
+        <div class=bottomImage>
+          <img src="/CB Clone/images/navLogo.png" alt="" height="50px">
+        </div>
+
+        <div class="sociaLinks">
+          <h2>Connect with us |</h2> 
+        </div>
+
+        <div class="contactCB">
+          <img src="/CB Clone/images/footMsg.png" alt="" height="30px"> &emsp;
+          <h2>contact@cb.in</h2>
+        </div>
+
+        <div class="contactNO">
+          <img src="/CB Clone/images/Iconfeather-phone-call.png" alt="" height="30px"> &emsp;
+          <h3>+91 6261210849 </h3> &emsp;
+          <h3>+91 9893152663 </h3>
+        </div>
       </div>
 
-      <div class="sociaLinks">
-        <h2>Connect with us |</h2> 
+      <div class="footerLine">
+        <img src="/CB Clone/images/Line7.png" alt="" >
       </div>
 
-      <div class="contactCB">
-        <img src="/CB Clone/images/footMsg.png" alt="" height="30px"> &emsp;
-        <h2>contact@cb.in</h2>
-      </div>
-          
+      <div class="bottom-last">
+        <div class="bottom-last-last">
+        <h3>*Terms & conditions apply.</h3>&emsp;
+        <h3>All contents & content are trademarks/ copyrights of their respective owners.</h3>&emsp;
+        <h3>&#169;Aditya Pathak</h3>
+        </div>
       </div>
 
 
