--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -646,16 +646,19 @@
         </div>
 
         <div class="sociaLinks">
-          <h2>Connect with us |</h2> 
+          <h2>Connect with us |</h2> &emsp;
+          <img src="/CB Clone/images/icons8-instagram-24.png" alt="" height="30px">
+          <img src="/CB Clone/images/icons8-facebook-24.png" alt="" height="30px">
+          <img src="/CB Clone/images/icons8-whatsapp-30.png" alt="" height="30px">
         </div>
 
         <div class="contactCB">
           <img src="/CB Clone/images/footMsg.png" alt="" height="30px"> &emsp;
-          <h2>contact@cb.in</h2>
+          <h2>contact@cb.in </h2>
         </div>
 
         <div class="contactNO">
-          <img src="/CB Clone/images/Iconfeather-phone-call.png" alt="" height="30px"> &emsp;
+          <img src="/CB Clone/images/icons8-phone.gif" alt="" height="20px"> &emsp;
           <h3>+91 6261210849 </h3> &emsp;
           <h3>+91 9893152663 </h3>
         </div>
@@ -672,10 +675,6 @@
         <h3>&#169;Aditya Pathak</h3>
         </div>
       </div>
-
-
-
-      
 
   </body>
 </html>
