--- a/zomato clone/index.html
+++ b/zomato clone/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>zomato</title>
 </head>
 <body>
+    <div>
+        <img src="/zomato clone/images/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="" width="100%" height="600px">
+    </div>
     
 </body>
 </html>
