--- a/zomato clone/index.html
+++ b/zomato clone/index.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>zomato</title>
-</head>
-<body>
-    <div>
-        <img src="/zomato clone/images/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="" width="100%" height="600px">
+  </head>
+  <body>
+    <div class="headerImg">
+      <img
+        src="/zomato clone/images/81f3ff974d82520780078ba1cfbd453a1583259680.png"
+        alt=""
+        width="100%"
+        height="600px"
+      />
+      <div class="nav">
+        <ul>
+          <li>Investor Relations</li>
+          <li>Add Restaurant</li>
+          <li>Log in</li>
+          <li>Sign up</li>
+        </ul>
+      </div>
+
+      <div class="zomatoLogo">
+        <img
+          src="/zomato clone/images/8313a97515fcb0447d2d77c276532a511583262271.png" alt=""  height="100px"/> <br><br>
+          <h1>Discover the best food & drinks in Indore</h1>
+      </div>
+
+      <div class="location">
+        <div class="dropdown">
+            <input type="button" class="dropbtn" placeholder="City">
+        <!--  <button class="dropbtn">Dropdown</button> -->
+           <div class="dropdown-content">
+                <a href="#">Indore</a>
+                <a href="#">Delhi NCR</a>
+                <a href="#">Mumbai</a>
+            </div>
+      </div>
+      </div>
+
+      <div></div>
     </div>
-    
-</body>
+  </body>
 </html>
