--- a/zomato clone/index.html
+++ b/zomato clone/index.html
@@ -19,7 +19,7 @@
           <li>Investor Relations</li>
           <li>Add Restaurant</li>
           <li>Log in</li>
-          <li>Sign up</li>
+          <li>Sign up</li> 
         </ul>
       </div>
 
@@ -29,18 +29,21 @@
           <h1>Discover the best food & drinks in Indore</h1>
       </div>
 
-      <div class="location">
+      <!-- <div class="location">
         <div class="dropdown">
             <input type="button" class="dropbtn" placeholder="City">
-        <!--  <button class="dropbtn">Dropdown</button> -->
+        
            <div class="dropdown-content">
                 <a href="#">Indore</a>
                 <a href="#">Delhi NCR</a>
                 <a href="#">Mumbai</a>
             </div>
       </div>
-      </div>
-
+      </div> -->
+    </div>
+    <div>
+      <div></div>
+      <div></div>
       <div></div>
     </div>
   </body>
