first card created.

--- a/zomato clone/index.html
+++ b/zomato clone/index.html
@@ -41,10 +41,10 @@
       </div>
       </div> -->
     </div>
-    <div>
-      <div></div>
-      <div></div>
-      <div></div>
+    <div class="firstCard">
+      <div class="OrderOnline">order Online</div>
+      <div class="dining">Dining</div>
+      <div class="NiCl">Nightlife and Clubs</div>
     </div>
   </body>
 </html>
