firstCard images added.

--- a/zomato clone/index.html
+++ b/zomato clone/index.html
@@ -42,9 +42,20 @@
       </div> -->
     </div>
     <div class="firstCard">
-      <div class="OrderOnline">order Online</div>
-      <div class="dining">Dining</div>
-      <div class="NiCl">Nightlife and Clubs</div>
+
+      <div class="OrderOnline">
+          <img src="/zomato clone/images/order online.webp" alt="" height="200px" width="100%">
+
+      </div>
+      <div class="dining">
+        <img src="/zomato clone/images/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="" height="200px" width="100%">
+
+      </div>
+      <div class="NiCl">
+        <img src="/zomato clone/images/nightclub.webp" alt="" height="200px" width="100%">
+
+      </div>
+
     </div>
   </body>
 </html>
