--- a/zomato clone/index.html
+++ b/zomato clone/index.html
@@ -44,7 +44,9 @@
     <div class="firstCard">
 
       <div class="OrderOnline">
+        <div class="orderImage">
           <img src="/zomato clone/images/order online.webp" alt="" height="200px" width="100%">
+        </div>
 
       </div>
       <div class="dining">
