--- a/zomato clone/index.html
+++ b/zomato clone/index.html
@@ -28,33 +28,21 @@
           src="/zomato clone/images/8313a97515fcb0447d2d77c276532a511583262271.png" alt=""  height="100px"/> <br><br>
           <h1>Discover the best food & drinks in Indore</h1>
       </div>
-
-      <!-- <div class="location">
-        <div class="dropdown">
-            <input type="button" class="dropbtn" placeholder="City">
-        
-           <div class="dropdown-content">
-                <a href="#">Indore</a>
-                <a href="#">Delhi NCR</a>
-                <a href="#">Mumbai</a>
-            </div>
-      </div>
-      </div> -->
     </div>
-    <div class="firstCard">
 
+    <div class="Bar1">
       <div class="OrderOnline">
-        <div class="orderImage">
-          <img src="/zomato clone/images/order online.webp" alt="" height="200px" width="100%">
+        <div class="OrderOnlineAbsolute">
+
         </div>
 
-      </div>
-      <div class="dining">
-        <img src="/zomato clone/images/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="" height="200px" width="100%">
+      </div class="">
+
+      <div>
 
       </div>
-      <div class="NiCl">
-        <img src="/zomato clone/images/nightclub.webp" alt="" height="200px" width="100%">
+
+      <div>
 
       </div>
 
