--- a/BOOTSTRAP/boot.html
+++ b/BOOTSTRAP/boot.html
@@ -48,9 +48,12 @@
      <p class="text-black bg-info display-1 text-center">Aditya Pathak</p>
 
       <!--Buttons-->
- 
-    <button class= "btn btn-lg btn-danger">Click Me!</button>
+    <div class="text-center">
+    <button class= "btn btn-outline-danger btn-lg ">Click Me!</button><br><br>
+    <button class= "btn btn-outline-secondary btn-sm ">Click Me!</button><br><br>
+    <button class= "btn btn-outline-warning text-black btn-m ">Click Me!</button>
 
+    </div>
 
     
 </body>
