--- a/CB Clone/contact.html
+++ b/CB Clone/contact.html
@@ -118,7 +118,21 @@
     <!--Form-->
     <div class="FormBG">
         <img src="/CB Clone/images/pexels-photo-5011647.webp" alt="" height="650px" width="100%">
-        <div class="FormMain">
+    <div class="Title">
+        <h1>Get in Touch With Us!</h1>
+    </div>
+    <div class="FormMain">
+        <div class="ContactForm">
+            <form class="formData">
+            <input type="text" id="fname" name="fname" placeholder="Your Full Name" required=""><br>
+            <input type="number" id="lname" name="lname" placeholder="Your Mobile Number" required=""><br>
+            <input type="email" id="lname" name="lname" placeholder="Your Email Address" required=""><br>
+            <textarea type="text" id="message" name="message" rows="2" placeholder="Enter Your Message" required=""></textarea><br>
+            <input type="button" id="submit" name="submit" value="submit" class="submit">
+            <!-- <button type="submit" class="submit">Submit</button> -->
+            </form> 
+        </div>
+
 
         </div>
 
