--- a/CB Clone/contact.html
+++ b/CB Clone/contact.html
@@ -99,7 +99,7 @@
       </div>
       <div class="navBar">
         <ul class="Bars">
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Courses</a></li>
           <li><a href="#">Internship</a></li>
