--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -106,7 +106,7 @@
           <li><a href="#">Testimonials</a></li>
           <li><a href="#">Branches</a></li>
           <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
     </div>
