--- a/BOOTSTRAP/boot.html
+++ b/BOOTSTRAP/boot.html
@@ -52,9 +52,28 @@
     <button class= "btn btn-outline-danger btn-lg ">Click Me!</button><br><br>
     <button class= "btn btn-outline-secondary btn-sm ">Click Me!</button><br><br>
     <button class= "btn btn-outline-warning text-black btn-m ">Click Me!</button>
+    </div><br><br>
 
-    </div>
+    <!--Utility Classes--> <!--Margin , Padding , MP in X&Y direction.-->
+    <div class="bg-primary m-4 p-4">small margin and padding</div>
+    <div class="bg-primary m-1 p-1">small margin and padding</div>
+    <div class="bg-primary mx-4 px-4">small margin and padding</div>
+    <div class="bg-primary mt-4 mb-4 pt-4 pb-4">small margin and padding</div>
 
+    <!--Borders-->
+    <div class="m-2 p-4 border display-2 text-center text-primary">Aditya Pathak</div> 
+    <div class="m-3 p3 border-start border-success">Aditya Pathak</div>
+    <div class="m-3 p-3 rounded border border-5">Aditya Pathak</div>
+    <div class="m-3 p-3 rounded-pill border border-5">Aditya Pathak</div>
+
+    <!--Box Shadow-->
+    <div class="m-3 p-3 shadow-lg">Aditya Pathak</div>
+
+    <!--Font Weight-->
+    <p class="fw-bold">Aditya Pathak</p>
+    <p class="fw-bolder">Aditya Pathak</p>
+    <p class="fw-light">Aditya Pathak</p>
+    <p class="fw-italic fw-light">Aditya Pathak</p>
     
 </body>
 </html>
