--- a/JS/HTML/zero.html
+++ b/JS/HTML/zero.html
@@ -72,7 +72,11 @@
       document.write("***"+ "<br>");
       document.write("****"+ "<br>");
       document.write("*****"+ "<br>");
-</script> -->
+
+
+</script>
+
+
 
 </body>
 </html>
