--- a/JS/HTML/incre.html
+++ b/JS/HTML/incre.html
@@ -8,12 +8,16 @@
   </head>
   <body>
     <script>
-      var i, j;
-      for (i = 1; i <= 5; i++) {
-        for (j = 5; j >= i; j--) {
-          document.write(j + " ");
-        }
-        document.write("<br>");
+      var i,j,k;
+ 
+      for(i=5;i>=1;i--) 
+      {
+      	for(j=1;j<=i;j++) 
+      	   document.write("&ensp;");
+      	 for(k=5;k>=i;k--) 
+      	 	document.write("*" + "");
+      	 document.write("<br>");
+      	 
       }
     </script>
   </body>
