--- a/JS/HTML/incre.html
+++ b/JS/HTML/incre.html
@@ -8,17 +8,17 @@
   </head>
   <body>
     <script>
-      var i,j,k;
+      // var i,j,k;
  
-      for(i=5;i>=1;i--) 
-      {
-      	for(j=1;j<=i;j++) 
-      	   document.write("&ensp;");
-      	 for(k=5;k>=i;k--) 
-      	 	document.write("*" + "");
-      	 document.write("<br>");
+      // for(i=5;i>=1;i--) 
+      // {
+      // 	for(j=1;j<=i;j++) 
+      // 	   document.write("&ensp;");
+      // 	 for(k=5;k>=i;k--) 
+      // 	 	document.write("*" + "");
+      // 	 document.write("<br>");
       	 
-      }
+      // }
     </script>
   </body>
 </html>
