--- a/JS/HTML/zero.html
+++ b/JS/HTML/zero.html
@@ -1,82 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-     <!-- <script>
-    #Basic Addition
-          var a,b,c;
-          a=parseFloat(prompt("Enter your weight in pounds"));
-          b=parseFloat(prompt("Enter your height in inches"));
-          c=a/b;
-          document.write("Your BMI is=" + c);
-      
+  </head>
+  <body>
+    <script>
+      // #Basic Addition
+      //       var a,b,c;
+      //       a=parseFloat(prompt("Enter your weight in pounds"));
+      //       b=parseFloat(prompt("Enter your height in inches"));
+      //       c=a/b;
+      //       document.write("Your BMI is=" + c);
 
-      1. Ramesh's Gross Salary
+      //   1. Ramesh's Gross Salary
 
-          basicSalary = parseFloat(prompt("Enter the basic salary:"));
-          da = (40 / 100) * basicSalary;
-          hra = (20 / 100) * basicSalary;
-          grossSalary = basicSalary + da + hra;
-          document.write("Your Gross Salary: " + grossSalary);
+      //       basicSalary = parseFloat(prompt("Enter the basic salary:"));
+      //       da = (40 / 100) * basicSalary;
+      //       hra = (20 / 100) * basicSalary;
+      //       grossSalary = basicSalary + da + hra;
+      //       document.write("Your Gross Salary: " + grossSalary);
 
+      // 2. City's distance convertor
 
-    2. City's distance convertor
+      //     mainDistance=parseFloat(prompt("Enter the difference between two cities"));
+      //     InMeters= mainDistance*1000;
+      //     InCentimeters = mainDistance*100000;
+      //     Infeet = mainDistance*3280.84;
+      //     InInches = mainDistance*39370.1;
+      //     document.write("Distance in Meters:"+ "&emsp;" + InMeters + "<br>");
+      //     document.write("Distance in Centimeters:" + "&emsp;"+ InCentimeters +"<br>");
+      //     document.write("Distance in feets:" + "&emsp;"+ Infeet +"<br>");
+      //     document.write("Distance in inches:" + "&emsp;"+ InInches);
 
-        mainDistance=parseFloat(prompt("Enter the difference between two cities"));
-        InMeters= mainDistance*1000;
-        InCentimeters = mainDistance*100000;
-        Infeet = mainDistance*3280.84;
-        InInches = mainDistance*39370.1;
-        document.write("Distance in Meters:"+ "&emsp;" + InMeters + "<br>");
-        document.write("Distance in Centimeters:" + "&emsp;"+ InCentimeters +"<br>");
-        document.write("Distance in feets:" + "&emsp;"+ Infeet +"<br>");
-        document.write("Distance in inches:" + "&emsp;"+ InInches);
+      // 3.Display of Marks
 
-    3.Display of Marks
+      //     PhysicsMarks=parseFloat(prompt("Enter Marks you scored in Physics Exam"));
+      //     ChemistryMarks=parseFloat(prompt("Enter Marks you scored in Chemistry Exam"));
+      //     MathMarks=parseFloat(prompt("Enter Marks you scored in Mathematics Exam"));
+      //     EnglishMarks=parseFloat(prompt("Enter Marks you scored English Exam"));
+      //     HindiMarks=parseFloat(prompt("Enter Marks you scored in Hindi Exam"));
 
-        PhysicsMarks=parseFloat(prompt("Enter Marks you scored in Physics Exam"));
-        ChemistryMarks=parseFloat(prompt("Enter Marks you scored in Chemistry Exam"));
-        MathMarks=parseFloat(prompt("Enter Marks you scored in Mathematics Exam"));
-        EnglishMarks=parseFloat(prompt("Enter Marks you scored English Exam"));
-        HindiMarks=parseFloat(prompt("Enter Marks you scored in Hindi Exam"));
+      //     TotalMarks = PhysicsMarks+ChemistryMarks+MathMarks+EnglishMarks+ HindiMarks;
+      //     TotalPercentage = (TotalMarks/500)*100
 
-        TotalMarks = PhysicsMarks+ChemistryMarks+MathMarks+EnglishMarks+ HindiMarks;
-        TotalPercentage = (TotalMarks/500)*100
+      //     document.write("You obtained:" + "&emsp;" + TotalMarks + " marks out of 500."+"<br>" );
+      //     document.write("You obtained:" + "&emsp;" + TotalPercentage+"%");
 
-        document.write("You obtained:" + "&emsp;" + TotalMarks + " marks out of 500."+"<br>" );
-        document.write("You obtained:" + "&emsp;" + TotalPercentage+"%");
+      // 4.Calculating Temperature
 
+      //     TempCalculate = parseInt(prompt("Enter your City' Temperature in Fahrenheit"));
 
-    4.Calculating Temperature
+      //     TempInCentigrade= 5/9 * (TempCalculate-32)
 
-        TempCalculate = parseInt(prompt("Enter your City' Temperature in Fahrenheit"));
-        
-        TempInCentigrade= 5/9 * (TempCalculate-32)
+      //     document.write("Your City's Temperature is" + "&emsp;" + TempInCentigrade + "&emsp;" + "Centigrade");
 
-        document.write("Your City's Temperature is" + "&emsp;" + TempInCentigrade + "&emsp;" + "Centigrade");
+      // 5.Area of Rectangle and Circle
 
+      //   a = +(prompt("enter your number"));
+      //   b = +(prompt("enter your number"));
+      //   c=a+b;
+      //   console.log(c);
 
-    5.Area of Rectangle and Circle
+      //   document.write("*" + "<br>");
+      //   document.write("**"+ "<br>");
+      //   document.write("***"+ "<br>");
+      //   document.write("****"+ "<br>");
+      //   document.write("*****"+ "<br>");
+var b, p;
+b = +prompt("Enter Starting Point");
+p = +prompt("Enter Ending Point");
 
-      a = +(prompt("enter your number"));
-      b = +(prompt("enter your number"));
-      c=a+b;
-      console.log(c);
+while (b <= p) {
+  document.write(b + " " + b * b + " " + b * b * b + "<br>");
+  b = b + 1;
+}
 
-      document.write("*" + "<br>");
-      document.write("**"+ "<br>");
-      document.write("***"+ "<br>");
-      document.write("****"+ "<br>");
-      document.write("*****"+ "<br>");
-
-
-</script>
-
-
-
-</body>
+    </script>
+  </body>
 </html>
