--- a/Javascript/Arrays/Arrays.html
+++ b/Javascript/Arrays/Arrays.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <script>
-     
-    </script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+
+</head>
+
+<body>
+  <script>
+    var a = [23 , 153 , 7 , 69 , 371 , 407 , 370]
+    for(i=0 ;  i<a.length ; i++){
+      
+    }
+
+
+
+  </script>
+</body>
+
 </html>
