--- a/Javascript/Arrays/ArrayDB/index.html
+++ b/Javascript/Arrays/ArrayDB/index.html
@@ -18,11 +18,16 @@
         <div class="formMain">
             <div class="form1">
             <form name="f1">
-                Name: <input type="text" name="t1"><br>
-                City: <input type="text" name="t2"><br>
-                Salary: <input type="text" name="t3"><br>
-                <input type="submit">
+                Name
                 <br>
+                <input type="text" name="t1"><br>
+                City
+                <br>
+                <input type="text" name="t2"><br>
+                Salary
+                <br>
+                <input type="text" name="t3">
+                <br><br>
                 <input type="button" value="First" onClick="sf()">
                 <input type="button" value="Previous" onClick="pre()">
                 <input type="button" value="Next" onClick="next()">
