--- a/Javascript/Arrays/ArrayDB/index.html
+++ b/Javascript/Arrays/ArrayDB/index.html
@@ -30,6 +30,8 @@
                     <input type="button" value="Previous" onClick="pre()">
                     <br>
                     <input type="button" value="Add New Record" onClick="addNewRecord()">
+                    <br>
+                    <input type="button" value="Delete" onClick="deleteRecord()">
                 </form>
             </div>
 
