--- a/Javascript/Arrays/Arrays.html
+++ b/Javascript/Arrays/Arrays.html
@@ -10,30 +10,44 @@
 
 <body>
   <script>
-    var a = [];
-      var sum = 0;
-      var avg, len;
-      len = +prompt("Enter Length of an Array:");
+    // var a = [];
+    //   var sum = 0;
+    //   var avg, len;
+    //   len = +prompt("Enter Length of an Array:");
 
-      if (!isNaN(len) && len > 0) {
-        for (var i = 0; i < len; i++) {
-          a[i] = +prompt("Enter a Number:");
-          sum += a[i];
-        }
-        avg = sum / len;
+    //   if (!isNaN(len) && len > 0) {
+    //     for (var i = 0; i < len; i++) {
+    //       a[i] = +prompt("Enter a Number:");
+    //       sum += a[i];
+    //     }
+    //     avg = sum / len;
 
-        document.write("Entered Numbers:<br>");
-        for (var i = 0; i < len; i++) {
-          document.write(a[i] + "<br>");
-        }
+    //     document.write("Entered Numbers:<br>");
+    //     for (var i = 0; i < len; i++) {
+    //       document.write(a[i] + "<br>");
+    //     }
 
-        document.write("Sum: " + sum + "<br>");
-        document.write("Average: " + avg.toFixed(2));
-      } else {
-        document.write(
-          "Invalid input. Please enter a valid positive number for the array length."
-        );
-      }
+    //     document.write("Sum: " + sum + "<br>");
+    //     document.write("Average: " + avg.toFixed(2));
+    //   } else {
+    //     document.write(
+    //       "Invalid input. Please enter a valid positive number for the array length."
+    //     );
+    //   }
+
+/*  
+var array = Array(Array(10, 11), Array(12, 13))
+  for (var i = 0; i < array.length; i++) {
+    for (var j = 0; j < array[i].length; j++) {
+      document.write(array[i] + [j]);
+      document.write(",");
+    }
+    document.write("<br>");
+  }
+
+  
+*/
+
 
 
 
