--- a/Javascript/Functions/index.html
+++ b/Javascript/Functions/index.html
@@ -9,20 +9,21 @@
 </head>
 
 <body>
-    <h1>JavaScript Functions</h1>
-    
-    <p>Call a function which performs a calculation and returns the result:</p>
-    
-    <p id="demo"></p>
+    <script>
+      function outerFunc(a, b) {
+            function innerFunc(a, b) {
+                return a + b;
+            }
 
-<script>
- 
- let x = myFunction(4, 3);
-    document.getElementById("demo").innerHTML = x;
+            const result = innerFunc(a, b);
 
-    function myFunction(a, b) {
-        return a * b;
-    }
+            return result;
+        }
+
+        console.log(outerFunc(10, 10)); // 👉️ 20
+        console.log(outerFunc(10, 20)); // 👉️ 30
+
+
 </script>
 
 </body>
