--- a/Javascript/Functions/index.html
+++ b/Javascript/Functions/index.html
@@ -2,29 +2,61 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <source src="/Javascript/Functions/Void.js" type="">
-</head>
+    <meta charset="utf-8">
+    <title>Arithmetic Calculator</title>
 
+</head>
 <body>
     <script>
-      function outerFunc(a, b) {
-            function innerFunc(a, b) {
-                return a + b;
-            }
 
-            const result = innerFunc(a, b);
-
-            return result;
+        function Add(x, y) {
+            return x + y;
         }
 
-        console.log(outerFunc(10, 10)); // 👉️ 20
-        console.log(outerFunc(10, 20)); // 👉️ 30
+        function Subtract(x, y) {
+            return x - y;
+        }
 
+        function multiply(x, y) {
+            return x * y;
+        }
 
-</script>
+        function Division(x, y) {
+            return x / y;
+        }
+
+        var a = +prompt("Enter Your Number 1:");
+        var b = +prompt("Enter Your Number 2:");
+        var Operation = prompt("What operation do you want to perform (add, subtract, multiply, divide)?").toLowerCase();
+    
+        switch (Operation) {
+
+            case "add":
+                var result = Add(a, b);
+                break;
+
+            case "subtract":
+                var result = Subtract(a, b);
+                break;
+
+            case "multiply":
+                var result = multiply(a, b);
+                break;
+
+            case "Division":
+                var result =  Division(a, b);
+                break;
+
+            default:
+                document.write("Enter Valid Operation");
+                break;
+
+        }
+
+        document.write(result);
+
+    </script>
+
 
 </body>
 
