--- a/Javascript/Functions/maxValue.html
+++ b/Javascript/Functions/maxValue.html
@@ -9,7 +9,7 @@
 <body> 
     <form> 
     <!-- <input style="height: 20px;" type="number" name="" id="" placeholder="Enter Number" > <br><br> -->
-    <input type="submit" id="maxValue" value="submit" onclick="primeNumber()">   
+    <input type="submit" id="maxValue" value="submit" onclick="maxArray()">   
     </form>
 </body>
 </html>
