--- a/Javascript/Arrays/ArrayDB/index.html
+++ b/Javascript/Arrays/ArrayDB/index.html
@@ -32,7 +32,12 @@
                     <input type="button" value="Add New Record" onClick="addNewRecord()">
                     <br>
                     <input type="button" value="Delete" onClick="deleteRecord()">
+                    <input type="button" name="" value="display" id="" onClick="display()">
                 </form>
+            </div>
+
+            <div>
+                <p id="res"><p>
             </div>
 
 
