--- a/Javascript/10-DOM/01.html
+++ b/Javascript/10-DOM/01.html
@@ -45,13 +45,16 @@
 </head>
 
 <body>
+  
     <div class="container">
-        <h1 id="main-heading">Favourite Movie Franchise</h1>
+        <h1 id="main-heading">Greatest Sportpersons of All Time</h1>
         <ul>
-            <li class="list-items">The Matrix</li>
-            <li class="list-items">Star Wars</li>
-            <li class="list-items">Harry Potter</li>
-            <li class="list-items">Lord Of the Rings</li>
+            <li class="list-items">Sachin Tendulkar</li>
+            <li class="list-items">Mike Tyson</li>
+            <li class="list-items">George Saint Pieere</li>
+            <li class="list-items">Usain Bolt</li>
+            <li class="list-items">Tiger Woods</li>
+            <li class="list-items">Michael Phelps</li>
         </ul>
     </div>
 </body>
