--- a/Javascript/10-DOM/Bulb/index.html
+++ b/Javascript/10-DOM/Bulb/index.html
@@ -9,8 +9,11 @@
 <body>
     <div id="bulb">
     </div>
-    <button>
-        Click
+    <button id="On">
+        On
+    </button>
+    <button id="Off">
+        Off
     </button>
     <script src="app.js"></script>
     
