--- a/Javascript/10-DOM/Projects/Friend Feature/index.html
+++ b/Javascript/10-DOM/Projects/Friend Feature/index.html
@@ -3,20 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bulb</title>
+    <title>Friend Feature</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
 </head>
 <body>
-    <div id="bulb">
+    <div id="card">
+        <img src="main1..jpeg" alt="">
+        <h1>Aditya Pathak</h1>
     </div>
-    <button id="On">
-        On
-    </button>
-    <button id="Off">
-        Off
-    </button>
-    <script src="app.js"></script>
-    
+
 </body>
 </html>
