--- a/SSD_PRo/RPS.html
+++ b/SSD_PRo/RPS.html
@@ -7,9 +7,24 @@
     <p>Rock Paper Scissors</p>
     <button onclick="
     const randomNumber = Math.random();
-    "
+    let computerMove = '';
+    if(randomNumber >= 0 && randomNumber < 1/3)
+    { 
+        computerMove = 'Rock';
+    }
+    else if(randomNumber >= 1/3 && randomNumber < 2/3)
+    {
+        computerMove = 'Paper'; 
+    }
+    else if(randomNumber >= 2/3 && randomNumber < 1)
+    {
+        computerMove = 'Scissor';
+    }
+    
+    console.log(computerMove);
+    " 
     >Rock</button> 
-    <button onclick=" "
+    <button onclick=" " 
     >Paper</button>
     <button onclick=" "
     >Scissors</button>
