--- a/Javascript/Advanced Functions/test.html
+++ b/Javascript/Advanced Functions/test.html
@@ -8,6 +8,8 @@
 <body>
   <script>
     /*
+
+    arr = [2,1,5,3,4]
     var a = (arr) => {
         max = min = arr[0];
         for (i = 0; i < arr.length; i++) {
