--- a/Practice/hotels.html
+++ b/Practice/hotels.html
@@ -110,6 +110,25 @@
      <td colspan="3">Data Not Found</td>
     </tr>
     </table>
+
+    <table border="8" bgcolor:"white"
+     cellpadding="10"+
+     cellspacing="5"
+ >
+        <tr>
+            <th>S.no</th>
+            <th>Name</th>
+            <th>Username</th>
+            <th colspan="4">ADDRESS</th>
+        </tr>
+        <tr>
+            <th colspan="3"></th>
+            <th>City</th>
+            <th>Street</th>
+            <th>Town</th>
+            <th>Country</th>
+        </tr>
+    </table>
     
  
     
