--- a/SSD_PRo/RPS.html
+++ b/SSD_PRo/RPS.html
@@ -8,7 +8,7 @@
 <body>
     <p>Rock Paper Scissors</p>
     <button onclick="
-   playGame('Rock');
+    playGame('Rock');
     ">Rock</button>
 
     <button onclick="  
@@ -16,7 +16,7 @@
     ">Paper</button>
 
     <button onclick=" 
-        playGame('scissors');
+    playGame('scissors');
     ">Scissors</button>
 
     <script>
@@ -34,6 +34,7 @@
                     result = 'Tie.';
                 }
             }
+
             else if (playerMove === 'paper') {
                 if (computerMove === 'Rock') {
                     result = 'You Win.'
@@ -44,7 +45,9 @@
                 else if (computerMove === 'Scissor') {
                     result = 'You Lose.';
                 }
-            } else if (playerMove === 'Rock') {
+            }
+
+            else if (playerMove === 'Rock') {
                 if (computerMove === 'Rock') {
                     result = 'Tie.'
                 }
