--- a/visitTibet/index.html
+++ b/visitTibet/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="navBar"> 
         <a href="#">ABOUT</a>
-        <a href="#"><i class="fa fa-user"></i> TEAM</a>
+        <a href="#"><i class="fa fa-user"></i> Login</a>
         <a href="#"><i class="fa fa-th"></i> WORK</a>
         <a href="#"><i class="fa fa-usd"></i> PRICING</a>
         <a href="#"><i class="fa fa-envelope"></i> CONTACT</a>
@@ -36,12 +36,13 @@
             <button>Learn More & Book Tickets</button>
         </div>
         <div class="banner-links">
-            <a href="#"><i class="fa fa-user"></i>Facebook</a>
-            <a href="#"><i class="fa fa-th"></i>Twitter</a>
-            <a href="#"><i class="fa fa-usd"></i>Instagram</a>
+            <a href="#"><i class="fa fa-facebook"></i>Facebook</a>
+            <a href="#"><i class="fa fa-twitter"></i>Twitter</a>
+            <a href="#"><i class="fa fa-instagram"></i>Instagram</a>
             <a href="#"><i class="fa fa-envelope"></i>Mail</a>
         </div>
    </div>
     
 </body>
 </html>
+
