--- a/Javascript/15-Advanced Functions/31-10-2023.html
+++ b/Javascript/15-Advanced Functions/31-10-2023.html
@@ -21,7 +21,7 @@
         }
         // show.call(ob1,69)
         show.call(ob1,[69,101])
-        show.call(ob2)
+        show.call(ob2,[54,78])
 
         // We can pass argument in call function with object. with different objects we can pass differents arguments.
     </script>
