--- a/Javascript/12-Objects/RPS.html
+++ b/Javascript/12-Objects/RPS.html
@@ -29,15 +29,9 @@
 
     <script>
 
-        const score = {
-            wins: 0,
-            losses: 0,
-            ties: 0
-        }
+        const score = JSON.parse(localStorage.getItem('score'));
 
-
-
-
+       
         function playGame(playerMove) {
             const computerMove = pickComputerMove();
             let result = '';
@@ -86,6 +80,7 @@
                 score.ties += 1;
             }
 
+            localStorage.setItem('score', JSON.stringify(score));
 
             alert(`You picked ${playerMove}. Computer picked ${computerMove}.${result}
 Wins: ${score.wins} , Losses : ${score.losses},Ties:${score.ties} `);}
