--- a/Javascript/14-Mini Projects/Digital Clock/index.html
+++ b/Javascript/14-Mini Projects/Digital Clock/index.html
@@ -15,3 +15,11 @@
 </body>
 
 </html>
+
+
+
+
+4.all field clear after add data.
+5.Edit ke click par particular row ka data update.
+
+indexing , for-of , pop , 
